# nFactorial-homeworks

./: file1.txt  main.py
HW Backend 4/HW Backend 4/hw-backend-4-master/app/: main.py  repository.py
HW Backend 4/HW Backend 4/hw-backend-4-master/templates/: index.html
HW Backend 4/HW Backend 4/hw-backend-4-master/templates/books/: index.html
HW Backend 5/HW6/: main.py
HW Backend 5/hw-backend-4-master/app/: main.py  repository.py
HW Backend 5/hw-backend-4-master/templates/books/: edit.html  index.html  new.html
HW Backend1: WSGI, FastAPI/: instructions.txt
HW Backend1: WSGI, FastAPI/FastAPI/: main.py
HW Backend1: WSGI, FastAPI/WSGI/: server-ping-pong.py  server-request-info.py
assignment10-11/: hw.py  test_hw.py
assignment12/: hw.py  test_hw.py  test_hw.py:Zone.Identifier
assignment14/: pyproject.toml  test_function_14.py  test_main.py
assignment15/: hw.py  test_hw.py
assignment16/: hw.py  test_hw.py
assignment6/: main.py
assignment7/: hw.py  hw_bonus.py
assignment8/: hw.py  hw_bonus.py
assignment9/: hw.py  test_hw.py
project_ascii/aa_fs/: main.py
project_ascii/aa_task1/: main.py
