[tool.poetry]
name = "assignment14"
version = "0.1.0"
description = "This is homework of student Duganov Alisher"
authors = ["Alisher Duganov"]
license = "no"

[tool.poetry.dependencies]
python = "3.10"
requests = "^2.32.3"
numpy = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
